jvimalprasathdev/src/objects/Customer_Portal_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Married Couple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Individuals (Not Married)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than Two Individuals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApplicationNumber__c</fullName>
        <formula>Lead_Loan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_number__c</fullName>
        <label>Application number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approximate_value_of_your_property__c</fullName>
        <label>Approximate value of your property?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Contact_Time__c</fullName>
        <label>Best Contact Time</label>
        <picklist>
            <controllingField>Time_Zone__c</controllingField>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Borrower_Name__c</fullName>
        <formula>Last_Name__c +&apos;,&apos;+ First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Borrower Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_State_2__c</fullName>
        <label>Borrowers State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Address_1__c</fullName>
        <description>This is to specify the first line of borrower’s address.</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Address_2__c</fullName>
        <description>This is to specify the second line of borrower’s address.</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_City__c</fullName>
        <description>This is to specify borrower’s city</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Country__c</fullName>
        <description>This is to specify borrower’s county.</description>
        <inlineHelpText>This is to specify borrower’s county.</inlineHelpText>
        <label>Borrowers_Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_County__c</fullName>
        <description>This is to specify borrower’s county.</description>
        <inlineHelpText>This is to specify borrower’s county.</inlineHelpText>
        <label>Borrowers County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Current_Residence__c</fullName>
        <label>Borrowers Current Residence</label>
        <picklist>
            <picklistValues>
                <fullName>Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Borrowers_Home_Phone__c</fullName>
        <description>This is to specify borrower’s home phone.</description>
        <inlineHelpText>One of Borrowers Home Phone, Borrowers Work Phone, Borrowers Mobile Phone or  Borrowers Email is required to move the lead to a certain status.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Borrowers_Zip_Postal_Code__c</fullName>
        <description>This is to specify borrower’s zip.</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Details__c</fullName>
        <label>Branch Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_ID__c</fullName>
        <label>Branch ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Sources__c</fullName>
        <description>This is to specify the channel sources from which the lead was generated. This pick list is to specify the high-level category. The second pick list needs to be used to further drill down to channel source.</description>
        <label>Channel Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Values__c</fullName>
        <label>Channel Values</label>
        <picklist>
            <picklistValues>
                <fullName>Bankrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Campaign Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Campaign Home Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-sell Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapitalOne.com Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapitalOne.com Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realtors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Mortgage Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention- Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention- Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Warm Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loans Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail MC Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>This is to specify the channel from which the lead was generated.</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Equity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClosingFees__c</fullName>
        <formula>Lead__r.Closing_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Fees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Fees__c</fullName>
        <label>Closing Fees</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_date__c</fullName>
        <label>Closing date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Create_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <formula>IF((ISBLANK( Related_Opportunity__r.OwnerId )),(IF( Lead__r.RecordType.Name != &apos;IsConverted&apos;,
((IF(AND(( Lead__r.Transfer_To_HLR__c = true), OR(Lead__r.Empower_Lead_ID__c = null, CONTAINS(Lead__r.Empower_Lead_ID__c,&apos;D&apos;))), &apos;Transfer to HLR&apos;,IF(AND(NOT(ISPICKVAL(Lead__r.Status,&apos;Transfer To HLR&apos;)), OR(Lead__r.Empower_Lead_ID__c = null, CONTAINS(Lead__r.Empower_Lead_ID__c,&apos;D&apos;))),&apos;Not Application&apos;,IF(AND(Lead__r.Empower_Lead_ID__c &lt;&gt; null,CONTAINS(Lead__r.Empower_Lead_ID__c,&apos;E&apos;), Lead__r.Loan_Update_Date__c &gt;= DATEVALUE(&apos;2013-11-06&apos;) ),TEXT(Lead__r.Status) ,IF(AND(Lead__r.Empower_Lead_ID__c &lt;&gt; null, LoanStatus_Update__c = null,CONTAINS(Lead__r.Empower_Lead_ID__c,&apos;E&apos;)), &apos;In Application&apos;,IF(AND(Lead__r.Empower_Lead_ID__c &lt;&gt; null, CONTAINS(Lead__r.Empower_Lead_ID__c,&apos;E&apos;)), &apos;In Application&apos;,&apos;Error&apos;)))))) ),
(IF(AND( (Lead__r.Related_Opportunity__r.Transfer_to_HLR__c = true),OR( Lead__r.Related_Opportunity__r.Empower_Lead_ID__c = null, CONTAINS(Lead__r.Related_Opportunity__r.Empower_Lead_ID__c ,&apos;D&apos;))),&apos;Transfer to HLR&apos;,IF(OR (Lead__r.Related_Opportunity__r.Empower_Lead_ID__c = null, CONTAINS(Lead__r.Related_Opportunity__r.Empower_Lead_ID__c ,&apos;D&apos;)),&apos;Not Application&apos;,IF(OR (Lead__r.Related_Opportunity__r.Empower_Lead_ID__c &lt;&gt; null, CONTAINS(Lead__r.Related_Opportunity__r.Empower_Lead_ID__c ,&apos;E&apos;)), ( Text(Lead__r.Related_Opportunity__r.Loan_Status__c )),&apos;Error&apos; ))))))
,(IF(AND( (Related_Opportunity__r.Transfer_to_HLR__c = true),OR( Related_Opportunity__r.Empower_Lead_ID__c = null, CONTAINS(Related_Opportunity__r.Empower_Lead_ID__c,&apos;D&apos;))),&apos;Transfer to HLR&apos;,IF(OR (Related_Opportunity__r.Empower_Lead_ID__c = null, CONTAINS(Related_Opportunity__r.Empower_Lead_ID__c,&apos;D&apos;)),&apos;In Application&apos;,IF(OR (Related_Opportunity__r.Empower_Lead_ID__c &lt;&gt; null, CONTAINS(Related_Opportunity__r.Empower_Lead_ID__c,&apos;E&apos;)), Text(( Related_Opportunity__r.Loan_Status__c )),&apos;Error&apos; )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DU_Response__c</fullName>
        <label>DU Response</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved/Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daytime_Phone__c</fullName>
        <label>Daytime Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Field__c</fullName>
        <description>Pulls the Salesforce Lead Number from the Lead object which is related to the record</description>
        <formula>IF( Lead__r.Transfer_To_HLR__c &lt;&gt; true, Empower_Lead_ID__c, Application_number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Salesforce Lead Number</inlineHelpText>
        <label>Dummy Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Empower_Lead_ID__c</fullName>
        <label>OPUS ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HLR_Flag__c</fullName>
        <formula>Lead__r.HLR_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HLR Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ad in my Credit Card or Bank Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner ad on the internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call from Capital One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising in the branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio or TV ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper or magazine ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends or Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <formula>TEXT(Lead__r.Loan_Interest__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadLoan__c</fullName>
        <description>Pulls the OPUS Id  from the Lead / Opportunity object which is related to the record</description>
        <formula>IF( Lead__r.Transfer_To_HLR__c &lt;&gt; true, Empower_Lead_ID__c, Application_number__c)</formula>
        <label>OPUS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Loan__c</fullName>
        <displayFormat>PL-{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Lead/Loan #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>RB Portal view is the Lead Number (Salesforce Lead Number)</description>
        <formula>Lead__r.Salesforce_Lead_Number__c</formula>
        <label>Lead Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Customer Portal Leads</relationshipLabel>
        <relationshipName>Customer_Portal_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoanStatus_Update__c</fullName>
        <formula>Lead__r.Loan_Update_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoanStatusUpdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Interest__c</fullName>
        <label>Loan Interest</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <label>Loan Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Status__c</fullName>
        <label>Loan Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <label>Loan Term</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_number__c</fullName>
        <label>Loan number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_address_same_as_current_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing address same as current address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marrital_Status__c</fullName>
        <label>Marrital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unmarried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mortgage_Consultant_Name__c</fullName>
        <label>Mortgage Consultant Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Consultant__c</fullName>
        <formula>IF( (ISBLANK(Related_Opportunity__c) ) ,(Lead__r.Owner:User.FirstName&amp;&quot; &quot;&amp;Lead__r.Owner:User.LastName),(Related_Opportunity__r.Owner.FirstName&amp;&quot; &quot; &amp;Related_Opportunity__r.Owner.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Type__c</fullName>
        <label>Notes Type</label>
        <picklist>
            <picklistValues>
                <fullName>Called Home, Left Message – No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Home, Made Contact – Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Home, No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Cell, Left Message – No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Cell, Made Contact – Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Cell – No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance Offer Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prequal Letter Sent (Purchase Offer Made)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted – Moved to LOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted – No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead - assigned to queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead - assigned to user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB Portal Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occupancy_Code__c</fullName>
        <label>Occupancy Code</label>
        <picklist>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Property</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <formula>MID(Borrowers_Home_Phone__c ,2, 3) &amp; MID(Borrowers_Home_Phone__c,7,3) &amp; MID(Borrowers_Home_Phone__c,11,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Borrowers_Address_1__c +&apos;,&apos;+ Borrowers_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <description>This is to specify Property State.</description>
        <inlineHelpText>This field is required.</inlineHelpText>
        <label>Property State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single-Family Home Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-Family Home Detached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi-Rise Condominium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low-Rise Condominium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Use__c</fullName>
        <label>Property Use</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation or Second Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Property</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RB_Branch__c</fullName>
        <label>RB Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_Cost_Center__c</fullName>
        <label>RB Cost Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_District__c</fullName>
        <label>RB District</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RB_Region__c</fullName>
        <label>RB Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Portal Leads</relationshipLabel>
        <relationshipName>Customer_Portal_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationShip_Banker_EID__c</fullName>
        <label>RelationShip Banker EID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <label>Submitted</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_formula__c</fullName>
        <formula>IF(Create_Lead__c = true,Lead__r.Submitted__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>Lead__r.LoanTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_amount_finance_needed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Including cash back amount</inlineHelpText>
        <label>Loan Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_To_HLR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer To HLR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>property_located__c</fullName>
        <label>Where is the property located?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>RB Portal</label>
    <listViews>
        <fullName>RB_Lead_List</fullName>
        <columns>Lead_Number__c</columns>
        <columns>LeadLoan__c</columns>
        <columns>Borrower_Name__c</columns>
        <columns>Total_amount_finance_needed__c</columns>
        <columns>Borrowers_Home_Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Property_Address__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Interest_Rate__c</columns>
        <columns>ClosingFees__c</columns>
        <columns>Mortgage_Consultant__c</columns>
        <columns>Closing_date__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Submitted_formula__c</columns>
        <columns>HLR_Flag__c</columns>
        <filterScope>Mine</filterScope>
        <label>RB Lead List</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>Customer Lead  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Portal Leads</pluralLabel>
    <recordTypes>
        <fullName>RB_Portal</fullName>
        <active>true</active>
        <label>RB Portal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>